# lightai-platform

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.release.glibc228  INSTALL.md  README.md
agent/: Cargo.toml
agent/src/: client.rs  config.rs  gateway_supervisor.rs  heartbeat.rs  lib.rs  main.rs  managed_process.rs  metrics.rs  models.rs  platform_log.rs  routes.rs  state.rs  tasks.rs
agent/src/collector/: execute.rs  inspect.rs  manifest.rs  mod.rs  registry.rs  tsv.rs
agent/src/gpu/: custom.rs  mod.rs  nvidia.rs
agent/src/tasks/: cleanup.rs  docker_backend.rs  logs.rs  mod.rs  ollama.rs  probe.rs  process.rs  process_command.rs  process_logs.rs  result.rs  runtime_check.rs  verify_model.rs
agent/tests/: collector_fail_closed.rs  collectors.rs  config_state_metrics.rs  file_tasks.rs  gateway_supervisor.rs  health.rs
deploy/: agent.example.toml  lightai-agent.service  lightai-server.service  server.example.toml
deploy/collectors/gpu/nvidia/: collector.toml  discover.sh  metrics.sh
deploy/collectors/gpu/nvidia-wsl/: collector.toml  discover.sh  metrics.sh
docs/: AI_HANDOFF.md  ARCHITECTURE.md  IMPLEMENTATION_NOTES.md  LOCAL_TEST_ENV.md  REFACTOR_PLAN.md
gateway/: Cargo.toml
gateway/src/: config.rs  main.rs  routes.rs
gateway/tests/: health.rs
migrations/: 0001_init.sql  0002_stage2_nodes.sql  0003_stage3a_models.sql  0004_stage3a_corrections.sql  0005_platform.sql
scripts/: dev_check_nvidia.sh  init-agent.sh  init-local.sh  init-server.sh  package-release-docker.sh  package-release.sh  verify-local-deployment.sh
server/: Cargo.toml
server/src/: agent_tasks.rs  auth.rs  cert.rs  collector_cli.rs  config.rs  db.rs  domain.rs  history_cleanup.rs  http_check.rs  lib.rs  main.rs  models.rs  platform_log.rs  repository.rs  routes.rs  stage3a.rs  util.rs
server/src/domain/: gateway.rs  instance_logs.rs  instances.rs  model_catalog.rs  model_files.rs  model_trash.rs  runtimes.rs  support.rs
server/tests/: agent_recovery_api.rs  config.rs  control_plane_auth.rs  gateway_tasks.rs  health.rs  history_cleanup.rs  instance_lifecycle_api.rs  model_catalog_api.rs  model_files_api.rs  node_identity_api.rs  runtime_api.rs  sqlite_foreign_keys.rs  stage2_api.rs  stage3a_api.rs  user_auth.rs  web_serving.rs
server/tests/common/: mod.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  api.ts  element-plus.ts  main.ts  styles.css  types.ts
web/src/components/: CollectorRegistryPanel.vue  ConfigPanel.vue  InstancesPanel.vue  LogsAuditPanel.vue  ModelsPanel.vue  NodesPanel.vue  RuntimeEnvironmentsPanel.vue  TrashPanel.vue  TrendChart.vue  UsersPanel.vue
web/src/components/instances/: instanceParams.ts  useInstanceRefresh.ts
web/src/utils/: instance.ts  templates.ts
