[workspace]
members = ["agent", "server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
constant_time_eq = "0.4"
rand = "0.9"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
sysinfo = "0.37"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "process", "fs", "io-util"] }
toml = "0.9"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
